# myBackend

./: Dockerfile  README.md  cloud-run.tf  main.tf  project.tfvars
PoetryProject/: pyproject.toml
PoetryProject/backend/: settings.py  urls.py
PoetryProject/projects/: models.py  urls.py  views.py
PoetryProject/projects/migrations/: 0001_initial.py
PoetryProject/projects/templates/: project_index.html
avi_backend/: manage.py
avi_backend/avi_backend/: asgi.py  settings.py  urls.py  wsgi.py
avi_backend/polls/: admin.py  models.py
avi_backend/polls/migrations/: 0001_initial.py  0002_article_reporter.py  0003_auto_20211005_1936.py  0004_auto_20220308_2201.py
cookbook/: requirements.txt
cookbook/BACKUP/: default-mehenwal-2.local-2021-10-09-215646.dump  mehenwal-2.local-2021-10-09-215912.tar
cookbook/BACKUP/cookbook/: settings.py  urls.py
cookbook/cookbook/: queries.graphql  settings.py
cookbook/cookbook/ingredients/migrations/: 0001_initial.py
docs/: cms.md  dependency-management.md  deployments.md  django-resources.md  django-rest.md  marketting-tools.md  rdbms.md  storage-services.md
mysite/: .dockerignore  Dockerfile  Makefile  requirements.txt
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
